# Space-Game

./: .gitignore  CMakeLists.txt  README.md
res/shaders/: downscale.comp  planet.frag  planet.vert  quad.frag  quad.vert
src/: build.sh
src/Core/: Application.cpp  Application.h  Window.cpp
src/Game/: Camera.cpp  Camera.h  Planet.cpp  Planet.h  Quad.cpp  Quad.h  Universe.cpp  Universe.h
src/OpenGL/: Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  Shader.cpp  Shader.h
